--- a/src/template.html
+++ b/src/template.html
@@ -8,14 +8,13 @@
   <body>
     <header class="about-me-container">
       <div class="profile-photo-container">
-        <picture>
+        <picture class="profile-photo">
           <img
-            src="./components/imgs/profile-photo.jpg"
+            class="profile-photo"
+            src="./components/imgs/pexels-pixabay-415829.jpg"
             alt="Profile Picture"
-            height="3"
           />
         </picture>
-        <p class="profile-photo-subtitle">Ashley Williams</p>
       </div>
       <div class="about-me-text-container">
         <h1>About Me</h1>
@@ -60,19 +59,30 @@
       <h1>My Work</h1>
       <div class="my-work-container">
         <div class="my-work-content">
-          <picture></picture>
+          <picture class="my-work-img">
+            <img
+              src="./components/imgs/my-work/odin-battleship.png"
+              alt="Battleship"
+            />
+          </picture>
           <div class="my-work-desc">
             <div class="my-work-header">
               <h1>Battleship</h1>
               <div class="my-work-links-container">
-                <a href="https://github.com/wtwo1529" target="_blank">
+                <a
+                  href="https://github.com/wtwo1529/odin-battleship"
+                  target="_blank"
+                >
                   <img
                     src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
                     class="social-icons"
                     width="25px"
                   />
                 </a>
-                <a>
+                <a
+                  href="https://wtwo1529.github.io/odin-battleship/"
+                  target="_blank"
+                >
                   <img
                     src="./components/imgs/external-link.svg"
                     alt=""
@@ -90,10 +100,9 @@
           </div>
         </div>
         <div class="my-work-content">
-          <picture>
+          <picture class="my-work-img">
             <img
-              class="my-work-img"
-              src="./components/imgs/odin-weather-app.png"
+              src="./components/imgs/my-work/odin-weather-app.png"
               alt="Weather App"
             />
           </picture>
@@ -101,14 +110,20 @@
             <div class="my-work-header">
               <h1>Weather App</h1>
               <div class="my-work-links-container">
-                <a href="https://github.com/wtwo1529" target="_blank">
+                <a
+                  href="https://github.com/wtwo1529/weather-app"
+                  target="_blank"
+                >
                   <img
                     src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
                     class="social-icons"
                     width="25px"
                   />
                 </a>
-                <a>
+                <a
+                  href="https://wtwo1529.github.io/weather-app/"
+                  target="_blank"
+                >
                   <img
                     src="./components/imgs/external-link.svg"
                     alt=""
@@ -126,10 +141,9 @@
           </div>
         </div>
         <div class="my-work-content">
-          <picture>
+          <picture class="my-work-img">
             <img
-              class="my-work-img"
-              src="./components/imgs/odin-to-do-list.png"
+              src="./components/imgs/my-work/odin-to-do-list.png"
               alt="To Do List"
             />
           </picture>
@@ -137,14 +151,140 @@
             <div class="my-work-header">
               <h1>To Do List</h1>
               <div class="my-work-links-container">
-                <a href="https://github.com/wtwo1529" target="_blank">
+                <a
+                  href="https://github.com/wtwo1529/to-do-list"
+                  target="_blank"
+                >
                   <img
                     src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
                     class="social-icons"
                     width="25px"
                   />
                 </a>
-                <a>
+                <a
+                  href="https://wtwo1529.github.io/to-do-list-dist/"
+                  target="_blank"
+                >
+                  <img
+                    src="./components/imgs/external-link.svg"
+                    alt=""
+                    width="25px"
+                  />
+                </a>
+              </div>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque,
+              facilis nisi deserunt eveniet facere praesentium quia. Molestias,
+              omnis beatae, nulla esse culpa enim quas expedita reprehenderit
+              atque, voluptatum itaque voluptate?
+            </p>
+          </div>
+        </div>
+        <div class="my-work-content">
+          <picture class="my-work-img">
+            <img
+              src="./components/imgs/my-work/odin-tic-tac-toe.png"
+              alt="Tic Tac Toe"
+            />
+          </picture>
+          <div class="my-work-desc">
+            <div class="my-work-header">
+              <h1>Tic Tac Toe</h1>
+              <div class="my-work-links-container">
+                <a
+                  href="https://github.com/wtwo1529/odin-tic-tac-toe"
+                  target="_blank"
+                >
+                  <img
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+                    class="social-icons"
+                    width="25px"
+                  />
+                </a>
+                <a
+                  href="https://wtwo1529.github.io/odin-tic-tac-toe/"
+                  target="_blank"
+                >
+                  <img
+                    src="./components/imgs/external-link.svg"
+                    alt=""
+                    width="25px"
+                  />
+                </a>
+              </div>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque,
+              facilis nisi deserunt eveniet facere praesentium quia. Molestias,
+              omnis beatae, nulla esse culpa enim quas expedita reprehenderit
+              atque, voluptatum itaque voluptate?
+            </p>
+          </div>
+        </div>
+        <div class="my-work-content">
+          <picture class="my-work-img">
+            <img
+              src="./components/imgs/my-work/odin-library.png"
+              alt="Library"
+            />
+          </picture>
+          <div class="my-work-desc">
+            <div class="my-work-header">
+              <h1>Library</h1>
+              <div class="my-work-links-container">
+                <a
+                  href="https://github.com/wtwo1529/odin-library"
+                  target="_blank"
+                >
+                  <img
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+                    class="social-icons"
+                    width="25px"
+                  />
+                </a>
+                <a href="wtwo1529.github.io/odin-library/" target="_blank">
+                  <img
+                    src="./components/imgs/external-link.svg"
+                    alt=""
+                    width="25px"
+                  />
+                </a>
+              </div>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque,
+              facilis nisi deserunt eveniet facere praesentium quia. Molestias,
+              omnis beatae, nulla esse culpa enim quas expedita reprehenderit
+              atque, voluptatum itaque voluptate?
+            </p>
+          </div>
+        </div>
+        <div class="my-work-content">
+          <picture class="my-work-img">
+            <img
+              src="./components/imgs/my-work/mcdonalds-clone.png"
+              alt="Library"
+            />
+          </picture>
+          <div class="my-work-desc">
+            <div class="my-work-header">
+              <h1>McDonalds Clone</h1>
+              <div class="my-work-links-container">
+                <a
+                  href="https://github.com/wtwo1529/restaurant-page"
+                  target="_blank"
+                >
+                  <img
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+                    class="social-icons"
+                    width="25px"
+                  />
+                </a>
+                <a
+                  href="https://wtwo1529.github.io/restaurant-page/"
+                  target="_blank"
+                >
                   <img
                     src="./components/imgs/external-link.svg"
                     alt=""
@@ -165,12 +305,12 @@
     </div>
     <footer>
       <div class="footer-info-container">
-        <h1>Contact Me</h1>
+        <h1 class="footer-title">Contact Me</h1>
         <p>
-          Please get in touch if you think our work could be mutually
-          beneficial!
+          Please get in touch if you think our <br />
+          work could be mutually beneficial!
         </p>
-        <p>1234 Random Road Random Town, California 12345</p>
+        <p>1234 Random Road<br />Random Town, California 12345</p>
         <div class="phone-number">
           <img src="./components/imgs/phone.svg" alt="" width="20px" />
           <p>555-555-5555</p>
@@ -178,6 +318,29 @@
         <div class="email">
           <img src="./components/imgs/email-outline.svg" alt="" width="20px" />
           <p>ashleywilliams.is.not.real@gmail.com</p>
+        </div>
+        <div class="social-links">
+          <a href="/" target="_blank">
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+              class="social-icons"
+              width="20px"
+            />
+          </a>
+          <a href="/" target="_blank">
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg"
+              class="social-icons"
+              width="20px"
+            />
+          </a>
+          <a href="/" target="_blank">
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/twitter/twitter-original.svg"
+              class="social-icons"
+              width="20px"
+            />
+          </a>
         </div>
       </div>
     </footer>
